[package]
name = "metrics-exporter-scope"
version = "0.1.2"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/roboplc/metrics-exporter-scope"
description = "Metrics scope exporter"
readme = "README.md"
keywords = ["metrics", "scope", "exporter"]

[dependencies]
bma-ts = { version = "0.1.14", features = ["serde"] }
rmp-serde = "1.3"
rtsc = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0.63"
tracing = "0.1.40"

# MSRV
metrics-legacy = { package = "metrics", version = "0.22", optional = true }
metrics-util-legacy = { package = "metrics-util", version = "0.16", default-features = false, features = ["recency", "registry"], optional = true }

# LATEST
metrics = { version = "0.23", optional = true }
metrics-util = { version = "0.17", default-features = false, features = ["recency", "registry"], optional = true }

[features]
default = ["latest"]
msrv = ["metrics-legacy", "metrics-util-legacy"]
latest = ["metrics", "metrics-util"]

[dev-dependencies]
tracing-subscriber = "0.3.18"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }
tokio = { version = "1.39", features = ["rt"] }
