[package]
name = "metrics-scope"
version = "0.1.3"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/roboplc/metrics-scope"
description = "Metrics scope UI"
readme = "README.md"
keywords = ["metrics", "scope", "ui"]

[dependencies]
atomic_float = "1.0.0"
bma-ts = "0.1.14"
clap = { version = "4.5.16", features = ["derive"] }
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["default", "all_loaders"] }
egui_plot = "0.28.1"
metrics-exporter-scope = { version = "0.1.2" }
once_cell = "1.19.0"
parking_lot = "0.12.3"
rtsc = { version = "0.3", features = ["parking_lot"] }

[profile.release]
strip = true
